# phd-hunter

./: .gitignore  README.md  main.py  pyproject.toml
agent/: config.py  crawl.py  db.py  fetch.py  graph.py  llm.py  prompts.py  rankings.py  report.py
cv/: cv-renyi-en-20260413.md  cv.md
