[project]
name = "mon-agent"
version = "0.1.0"
description = "PhD professor & program matching agent using local LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.9",
    "httpx[http2]>=0.27.0",
    "playwright>=1.44.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
]
